// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationStyle renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: 0;
  text-decoration-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: 0;
  text-decoration-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: 0;
  text-decoration-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: 0;
  text-decoration-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: hasnot;
  text-decoration-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: has;
  text-decoration-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: hasnot;
  text-decoration-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: has;
  text-decoration-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: invalid.path.1;
  text-decoration-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: invalid.path.1;
  text-decoration-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: invalid.path.1;
  text-decoration-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: invalid.path.1;
  text-decoration-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: -54881;
  text-decoration-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: -54881;
  text-decoration-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: -42365;
  text-decoration-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: -42365;
  text-decoration-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: July;
  text-decoration-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: July;
  text-decoration-style: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: January;
  text-decoration-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: December;
    text-decoration-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: June;
    text-decoration-style: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: January;
  text-decoration-style: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: December;
    text-decoration-style: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: June;
    text-decoration-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: July;
    text-decoration-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: July;
    text-decoration-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: June;
    text-decoration-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: June;
    text-decoration-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: July;
  text-decoration-style: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: July;
  text-decoration-style: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: April;
  text-decoration-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: January;
    text-decoration-style: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: December;
    text-decoration-style: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: April;
  text-decoration-style: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: January;
    text-decoration-style: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: December;
    text-decoration-style: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-style: July;
    text-decoration-style: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-style: July;
    text-decoration-style: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: September;
    text-decoration-style: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: November;
    text-decoration-style: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: August;
    text-decoration-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-style: January;
    text-decoration-style: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: December;
    text-decoration-style: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: June;
    text-decoration-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-style: January;
    text-decoration-style: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: December;
    text-decoration-style: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-style: April;
    text-decoration-style: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-style: May;
    text-decoration-style: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-style: June;
    text-decoration-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: 54881;
  text-decoration-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: 54881;
  text-decoration-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: 42365;
  text-decoration-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: 42365;
  text-decoration-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: July;
  text-decoration-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: July;
  text-decoration-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: June;
  text-decoration-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: June;
  text-decoration-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationStyle renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textDecorationStyle renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-style: DarkSlateBlue;
  text-decoration-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: DarkSlateBlue;
  text-decoration-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: DarkSlateBlue;
  text-decoration-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-style: DarkSlateBlue;
  text-decoration-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
